# cortexflow

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  ablation_study.py  brain_interpolation.py  category_analysis.py  cross_subject_study.py  crossmodal_transfer_study.py  cv_study.py  noise_robustness.py  pyproject.toml  representation_analysis.py  roi_ablation_study.py  sampling_dynamics_study.py  scaling_study.py  train_demo.py  train_natural.py  train_tribe.py  verify_real.py  vlm_diversity_study.py
.github/workflows/: ci.yml
examples/: brain2audio_demo.py  brain2img_demo.py  brain2text_demo.py  diversity_demo.py
src/cortexflow/: __init__.py  _types.py  brain2audio.py  brain2img.py  brain2text.py  brain_encoder.py  dit.py  flow_matching.py  training.py  vae.py
tests/: conftest.py  test_brain2audio.py  test_brain2img.py  test_brain2text.py  test_brain_encoder.py  test_dit.py  test_flow_matching.py  test_init.py  test_integration.py  test_training.py  test_types.py  test_vae.py
train_outputs/: ablation_results.json  brain2audio.pt  brain2text.pt  category_results.json  cross_subject_results.json  crossmodal_transfer_results.json  cv_results.json  interpolation_results.json  natural_results.json  noise_robustness.json  representation_analysis.json  results.json  roi_ablation_results.json  sampling_dynamics_results.json  scaling_results.json  tribe_results.json  vlm_diversity_results.json
verify_outputs/: results.json  test1_conditioning.pt  test2_diversity.pt  test3_roi.pt
